@@ -39,13 +39,14 @@ v16.0.00
 		Attendance: added year group selectors to reports for not present and not onsite
 		Attendance: added ability for students to view their own attendance data for the current year
 		Finance: added logging for failed bulk email sends
+		Form Group: added link to print listing of students in form group detail view
 		Markbook: fixed multi-byte string length issue causing automatic comment expansion in Markbook view
 		Messenger: added the ability to resend in By Roll Group view in View Send Report
 		Messenger: added ability for uses with Manage Messages_all to resend on behalf of others
 		Planner: fixed module name substitution in links in Lesson Planner
 		Students: added sibling and family information to Letters Home by Roll Group
 		Students: added Comment field to medical form, linked to student application form.
-		Students: added View option to Students by Roll Group report, allowing Basic or Extended view
+		Students: added View option to Students by Form Group report, allowing Basic or Extended view
 		User Admin: fixed Child's Name list in Edit Family to include all students
 		User Admin: fixed bug preventing some family links from showing up in Manage Users
 		User Admin: removed Back link from child and adult delete modals in Manage Families
